fix author request
