# src/main/java/podcastService/author/dto/BecomeAuthorResponse.java
@@ -1,0 +1,13 @@
+package podcastService.author.dto;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+
+public record BecomeAuthorResponse(
+        @JsonProperty("access_token")
+        String accessToken,
+        @JsonProperty("expires_in")
+        long expiresIn,
+        @JsonProperty("author_profile")
+        AuthorProfileResponse authorProfile
+) {
+}
